# claude-view

./: .dockerignore  .easignore  .editorconfig  .env.example  .gitignore  .gitmodules  .watchmanconfig  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PHASE_B_IMPLEMENTATION.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pt.md  README.zh-CN.md  README.zh-TW.md  README_AUDIT_REPORTS.md  biome.json  claude-view-hook-sync.skill  cloud-architect.skill  deny.toml  docker-compose.yml  eslint.config.js  foo.rs  index.html  install.sh  lefthook.yml  package-lock.json  package.json  playwright.config.ts  pm-status.skill  snapshot-monitor.txt  start.sh  (+5 more)
crates/core/: Cargo.toml
crates/core/examples/: bench_clone_cost.rs  debug_json.rs
crates/core/fixtures/: phase_system_prompt.txt
crates/core/src/: accumulator.rs  analytics_rollup.rs  analytics_scope_contract.rs  app_config.rs  block_types.rs  branch_filter.rs  category.rs  classification.rs  cli.rs  contribution.rs  cost.rs  credentials.rs  discovery.rs  error.rs  evidence_audit.rs  facets.rs  features.rs  field_inventory.rs  file_history.rs  fluency_score.rs  hook_to_block.rs  invocation.rs  jsonl_reader.rs  lib.rs  live_parser.rs  mcp_files.rs  memory_files.rs  metrics.rs  parser.rs  paths.rs  pipeline_checks.rs  plan_files.rs  pricing.rs  progress.rs  prompt_history.rs  prompt_templates.rs  registry.rs  report.rs  session_catalog.rs  session_files.rs  (+15 more)
crates/core/tests/: block_accumulator_invariant_test.rs  cost_pipeline_parity_test.rs  evidence_audit_integration.rs  historical_interactions_test.rs  live_parser_integrity_test.rs  parser_equivalence_test.rs  pipeline_invariant_test.rs  telemetry_config_test.rs  telemetry_events_test.rs  validate_all_sessions_test.rs
crates/db/: Cargo.toml
crates/db/examples/: bench_dashboard.rs  bench_indexing.rs
crates/db/src/: git_correlation.rs  indexer.rs  indexer_parallel.rs  insights_trends.rs  jsonl_first_poc.rs  lib.rs  migrations.rs  pricing.rs  queries.rs  snapshots.rs  test_support.rs  trends.rs
crates/db/tests/: acceptance_tests.rs  action_log_dual_write.rs  archive_sessions.rs  cost_consistency_test.rs  deterministic_parity_test.rs  e2e_stat_verification_test.rs  edge_cases_test.rs  flag_delta_e2e.rs  fold_task_test.rs  golden_parse_test.rs  hook_events_backfill_test.rs  indexer_integrity_test.rs  indexer_v2_parity.rs  indexer_v2_shadow_e2e.rs  integrity_real_shape_fixtures.rs  model_catalog.rs  multi_writer_bench.rs  no_ghost_sessions.rs  polymorphic_project_filter_test.rs  queries_ai_generation_test.rs  queries_classification_test.rs  queries_dashboard_test.rs  queries_invocables_test.rs  queries_models_test.rs  queries_sessions_test.rs  queries_shared.rs  queries_system_test.rs  stage_c_e2e_test.rs  subagent_dedup_test.rs
crates/observability/: Cargo.toml
crates/observability/benches/: dispatch.rs
crates/observability/src/: config.rs  correlation.rs  http_middleware.rs  lib.rs  otel.rs  panic_hook.rs  sentry_integration.rs  service_meta.rs  subscriber.rs  testing.rs
crates/observability/tests/: http_middleware.rs  init_smoke.rs  observability_e2e.rs  panic_hook.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: catalog.rs  discover.rs  kind.rs  lib.rs  model.rs
crates/relay/: .dockerignore  .env.example  Cargo.toml  Dockerfile  fly.toml
crates/relay/src/: auth.rs  device_cache.rs  lib.rs  main.rs  pairing.rs  posthog.rs  push.rs  rate_limit.rs  state.rs  supabase.rs  ws.rs
crates/relay/static/: mobile.html
crates/relay/tests/: device_cache_test.rs  integration.rs  stateless_ws_test.rs
crates/search/: Cargo.toml
crates/search/src/: grep.rs  grep_types.rs  indexer.rs  lib.rs  migration.rs  prompt_index.rs  query.rs  types.rs  unified.rs  version_layout.rs
crates/search/tests/: source_message_index_integrity_test.rs  unified_integration_test.rs
crates/server/: .env.example  Cargo.toml
crates/server-insights/: Cargo.toml
crates/server-insights/src/: generators.rs  lib.rs  tests.rs  types.rs
crates/server-jobs/: Cargo.toml
crates/server-jobs/src/: lib.rs  runner.rs  types.rs
crates/server-live-state/: Cargo.toml
crates/server-live-state/src/: agent.rs  classify.rs  core.rs  event.rs  field_types.rs  hook_fields.rs  jsonl_fields.rs  lib.rs  merge_wrappers.rs  source_info.rs  statusline_fields.rs
crates/server-local-llm/: Cargo.toml
crates/server-local-llm/src/: client.rs  config.rs  lib.rs  omlx_binary.rs  service.rs
crates/server-process-tree/: Cargo.toml
crates/server-process-tree/src/: classifier.rs  component_types.rs  helpers.rs  lib.rs  proc_memory.rs  sysctl_cmd.rs  types.rs
crates/server-sidecar/: Cargo.toml
crates/server-sidecar/src/: error.rs  health.rs  lib.rs  lifecycle.rs  manager.rs  process.rs  tests.rs
crates/server-teams/: Cargo.toml
crates/server-teams/src/: jsonl_index.rs  lib.rs  parser.rs  snapshot.rs  store.rs  tests.rs  types.rs
crates/server-types/: Cargo.toml
crates/server-types/src/: classify_state.rs  error.rs  indexing_state.rs  lib.rs  metrics.rs  route_deps.rs  terminal_state.rs
crates/server/src/: app_factory.rs  backfill.rs  backfill_project_dirs.rs  cache.rs  classify_state.rs  codegen_format.rs  crypto.rs  error.rs  facet_ingest.rs  file_tracker.rs  git_sync_state.rs  indexing_state.rs  insights.rs  lib.rs  main.rs  metrics.rs  openapi.rs  platform.rs  search_migration.rs  search_service.rs  session_catalog_adapter.rs  share_serializer.rs  sidecar.rs  startup.rs  state.rs  supabase_proxy.rs  supervisor.rs  teams.rs  telemetry.rs  terminal_state.rs  tests.rs  time_range.rs
crates/server/tests/: auth_routes_test.rs  cold_start_bandwidth.rs  devices_routes_test.rs  disk_dedup_test.rs  model_catalog_api.rs  openapi_compatibility.rs  process_tree_integration.rs  relay_client_reauth_test.rs  (+6 more)
crates/session-parser/: Cargo.toml
crates/stats-rollup/: Cargo.toml
crates/stats-rollup-derive/: Cargo.toml
crates/types/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: session_parser.rs
(+2897 files in other folders)
