# Cargo.toml (root)
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/tombelieber/claude-view"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "test-util"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["util"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Search (Phase 2)
tantivy = "0.22"

# File watcher (Phase 2)
notify = "8.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Terminal UI
indicatif = "0.17"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
urlencoding = "2"
memmap2 = "0.9"
memchr = "2"
ts-rs = { version = "11", features = ["serde-compat"] }

# Testing
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"
assert-json-diff = "2"
pretty_assertions = "1"

# Internal crates
vibe-recall-core = { path = "crates/core" }
vibe-recall-db = { path = "crates/db" }
vibe-recall-search = { path = "crates/search" }
vibe-recall-server = { path = "crates/server" }

[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 1  # Faster test compilation
