# Cargo.toml (root)
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tombelieber/claude-view"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "test-util"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-stream = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["util", "timeout"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Search (Phase 2)
tantivy = "0.22"

# Grep (ripgrep core — regex search over raw JSONL)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# File watcher (Phase 2)
notify = "8.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Terminal UI
indicatif = "0.17"

# Browser
open = "5"

# HTTP client (for litellm pricing fetch)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
urlencoding = "2"
memmap2 = "0.9"
memchr = "2"
sysinfo = "0.33"
similar = "2"
ts-rs = { version = "11", features = ["serde-compat", "serde-json-impl"] }

# Testing
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"
assert-json-diff = "2"
pretty_assertions = "1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Phase F: Unix socket HTTP client (sidecar proxy)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Internal crates
claude-view-core = { path = "crates/core" }
claude-view-db = { path = "crates/db" }
claude-view-search = { path = "crates/search" }
claude-view-server = { path = "crates/server" }

[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 1  # Faster test compilation
