# Cargo.toml (root)
[workspace]
resolver = "2"
members = ["crates/*","workspace-hack"]

[workspace.package]
version = "0.36.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tombelieber/claude-view"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "test-util"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-stream = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["util", "timeout"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Search (Phase 2)
tantivy = "0.22"

# Grep (ripgrep core — regex search over raw JSONL)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# File watcher (Phase 2)
notify = "8.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Terminal UI
indicatif = "0.17"

# Browser
open = "5"

# HTTP client (auth, sidecar proxy, telemetry)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
clap = { version = "4", features = ["derive"] }

# Checksums and encoding
crc32fast = "1"
hex = "0.4"

# Utilities
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
urlencoding = "2"
memmap2 = "0.9"
memchr = "2"
walkdir = "2"
flate2 = "1"
sysinfo = "0.33"
similar = "2"
ts-rs = { version = "12", features = ["serde-compat", "serde-json-impl", "no-serde-warnings"] }
uuid = { version = "1", features = ["v4"] }

# Testing
mockito = "1"
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"
assert-json-diff = "2"
pretty_assertions = "1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Phase F: Unix socket HTTP client (sidecar proxy)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Internal crates
claude-view-types = { path = "crates/types" }
claude-view-core = { path = "crates/core" }
claude-view-db = { path = "crates/db" }
claude-view-search = { path = "crates/search" }
claude-view-server = { path = "crates/server" }
claude-view-server-sidecar = { path = "crates/server-sidecar" }
claude-view-server-insights = { path = "crates/server-insights" }
claude-view-server-jobs = { path = "crates/server-jobs" }
claude-view-server-teams = { path = "crates/server-teams" }
claude-view-server-live-state = { path = "crates/server-live-state" }
claude-view-server-process-tree = { path = "crates/server-process-tree" }
claude-view-server-local-llm = { path = "crates/server-local-llm" }
claude-view-server-types = { path = "crates/server-types" }

# ── Build Profiles ────────────────────────────────────────────────────
#
# dev      — fastest compile, debug iteration
# release  — fast optimized: thin LTO, parallel codegen, unwind-safe
# dist     — ship-quality: fat LTO, PGO-ready, panic=abort, smallest+fastest
# test     — light optimization for faster test execution
#
# Daily:   ./scripts/cq build --release
# Ship/CI: cargo build --profile dist -p claude-view-server --no-default-features --features dist

[profile.dev]
opt-level = 0          # Fastest compile (no optimization)
debug = 1              # Minimal debug info (2→1 saves ~40% disk + link time)
incremental = true     # Reuse previous compilation work

[profile.release]
opt-level = 2          # 95% of -O3 speed, measurably faster compile than -O3
lto = "thin"           # Parallel thin LTO (LLVM 21 — mature, 80% of fat LTO benefit)
strip = true           # No debug symbols
# codegen-units = 16 (default) — max LLVM parallelism
# panic = "unwind" (default) — keeps tokio task isolation for dev debugging

[profile.dist]
inherits = "release"
opt-level = 3          # Maximum optimization — aggressive inlining, vectorization
lto = true             # Fat LTO: single-threaded whole-program LLVM optimization
codegen-units = 1      # Single codegen unit: maximum cross-function optimization scope
panic = "abort"        # No unwinding tables (~2.9MB saved), no unwinding overhead
strip = true           # No debug symbols in shipped binary
# trim-paths via RUSTFLAGS in build-dist.sh (not stable in Cargo.toml yet)

[profile.test]
opt-level = 1  # Faster test compilation
