# crates/core/Cargo.toml
[package]
name = "claude-view-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
regex-lite = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
async-trait = "0.1"
memchr = { workspace = true }
similar = { workspace = true }
uuid = { workspace = true }
rust-stemmers = "1.2"
reqwest = { workspace = true }
utoipa = { version = "5" }

[features]
# Gate ts-rs file generation behind this feature so `cargo test` alone
# never overwrites formatted types. Only generate-types.sh enables this.
codegen = []

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = "3"

[[bin]]
name = "evidence-audit"
path = "src/bin/evidence_audit.rs"
