# crates/db/Cargo.toml
[package]
name = "vibe-recall-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vibe-recall-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
