[package]
name = "claude-view-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "claude_view_observability"
path = "src/lib.rs"

[dependencies]
claude-view-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id", "trace", "util"] }
http = "1"
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
