[package]
name = "claude-view-relay"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
