[package]
name = "claude-view-relay"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
claude-view-observability = { path = "../observability" }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
anyhow = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
rustls = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
