# crates/search/Cargo.toml
[package]
name = "claude-view-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claude-view-core = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
ts-rs = { workspace = true }
chrono = { workspace = true }
grep-matcher = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
codegen = ["claude-view-core/codegen"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
