[package]
name = "claude-view-server-insights"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = []

[dependencies]
serde = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
