[package]
name = "claude-view-server-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = []

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
serde_json = { workspace = true }
