[package]
name = "claude-view-server-local-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = ["claude-view-core/codegen"]

[dependencies]
claude-view-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
claude-view-types = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
