[package]
name = "claude-view-server-process-tree"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = []

[dependencies]
chrono = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
ts-rs = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
