[package]
name = "claude-view-server-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
reqwest = { workspace = true }
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
