[package]
name = "claude-view-server-teams"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = []

[dependencies]
chrono = { workspace = true }
claude-view-core = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }
claude-view-types = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
