[package]
name = "claude-view-server-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = ["claude-view-core/codegen", "claude-view-db/codegen"]

[dependencies]
axum = { workspace = true }
claude-view-core = { workspace = true }
claude-view-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
