# crates/server/Cargo.toml
[package]
name = "vibe-recall-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vibe-recall"
path = "src/main.rs"

[dependencies]
vibe-recall-core = { workspace = true }
vibe-recall-db = { workspace = true }
vibe-recall-search = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
axum-test = { workspace = true }
assert-json-diff = { workspace = true }
pretty_assertions = { workspace = true }
