# crates/server/Cargo.toml
[package]
name = "vibe-recall-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vibe-recall"
path = "src/main.rs"

# Feature Flags for Safe Rollback
#
# All features are enabled by default. To disable a feature at build time:
#   cargo build --no-default-features --features "time-range,heatmap-tooltip"
#
# Or disable specific features:
#   cargo build --no-default-features --features "time-range,sync-redesign,ai-generation,storage-overview"
#
# This enables safe rollback if a feature causes issues post-release.
[features]
default = ["time-range", "heatmap-tooltip", "sync-redesign", "ai-generation", "storage-overview"]

# Dashboard time range selector (7d/30d/90d/all-time)
time-range = []

# Enhanced heatmap with detailed tooltips
heatmap-tooltip = []

# Redesigned sync UI with progress indicators
sync-redesign = []

# AI generation stats endpoint
ai-generation = []

# Storage overview endpoint
storage-overview = []

[dependencies]
vibe-recall-core = { workspace = true }
vibe-recall-db = { workspace = true }
vibe-recall-search = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
ts-rs = { workspace = true }
sqlx = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
notify = { workspace = true }
sysinfo = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
axum-test = { workspace = true }
assert-json-diff = { workspace = true }
pretty_assertions = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
