# crates/session-parser/Cargo.toml
#
# CQRS Phase 1 — Stage A (parse_jsonl) + Stage B (extract_stats) + blake3
# content-hash staleness. Pure-function crate; no I/O, no DB.
# PR 1.1 scaffold; PR 1.2 adds implementations.

[package]
name = "claude-view-session-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
claude-view-core = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
arbitrary = { workspace = true }
tempfile = { workspace = true }
