# crates/stats-rollup-derive/Cargo.toml
#
# CQRS Phase 1 proc-macro scaffold. PR 1.1 emits a no-op; PR 1.4 validates
# `#[rollup(buckets=…, dimensions=…)]` attributes; Phase 4 expands to full
# codegen of 15 typed rollup structs + migrations.

[package]
name = "claude-view-stats-rollup-derive"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
trybuild = { workspace = true }
