# crates/stats-rollup/Cargo.toml
#
# CQRS Phase 1 — Stage C rollup. Associative-monoid merge over session windows.
# Pure; no I/O, no DB. PR 1.1 scaffold; PR 1.3 adds `rollup`, `merge`, `period`.

[package]
name = "claude-view-stats-rollup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
claude-view-core = { workspace = true }
claude-view-stats-rollup-derive = { path = "../stats-rollup-derive" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
