[package]
name = "claude-view-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
codegen = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
utoipa = { version = "5" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
